# efdl

./: .gitignore  CMakeLists.txt  README.md
cmake/: compilation.cmake  deps.cmake  mac.cmake  target.cmake  uninstall.cmake
include/: CommitThread.h  DownloadTask.h  Downloader.h  EfdlGlobal.h  Range.h  ThreadPool.h  Util.h  Version.h
scripts/: makedist.sh
src/: CMakeLists.txt  CommitThread.cpp  CommitThread.h  DownloadManager.cpp  DownloadManager.h  DownloadTask.cpp  DownloadTask.h  Downloader.cpp  Downloader.h  Range.cpp  Range.h  Util.cpp  Util.h  Version.h  main.cpp
src/core/: CMakeLists.txt  CommitThread.cpp  DownloadTask.cpp  Downloader.cpp  Range.cpp  ThreadPool.cpp  Util.cpp
