CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT(efdl)

SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_VERBOSE_MAKEFILE OFF)
SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS TRUE)

SET(CMAKE_MODULE_PATH
  ${CMAKE_MODULE_PATH}
  "${CMAKE_CURRENT_SOURCE_DIR}/cmake"
  )

IF (NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE MinSizeRel) 
ENDIF()

INCLUDE(platform)
INCLUDE(target)

ADD_SUBDIRECTORY(src)

ADD_CUSTOM_TARGET(
  uninstall
  "${CMAKE_COMMAND}" -P "${CMAKE_MODULE_PATH}/uninstall.cmake"
  )

ADD_CUSTOM_TARGET(
  dist
  COMMENT "Creating distribution"
  )

SET(DIST_DIR "${BIN_DIR}/dist")
IF (APPLE OR LINUX)
  IF (APPLE)
    SET(ZIP_FILE "efdl_mac64.zip")
  ELSE()
    SET(ZIP_FILE "efdl_linux64.zip")
  ENDIF()
  SET(ZIP_DIST "${BIN_DIR}/${ZIP_FILE}")
  ADD_CUSTOM_COMMAND(
    TARGET dist
    POST_BUILD
    COMMAND scripts/makedist.sh ${BIN_DIR} ${DIST_DIR} ${ZIP_DIST}
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    )
ENDIF()

MESSAGE(STATUS "BUILD: ${CMAKE_BUILD_TYPE}")
MESSAGE(STATUS "INSTALL PREFIX: ${CMAKE_INSTALL_PREFIX}")
