CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(efdl)

SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_VERBOSE_MAKEFILE OFF)
SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS TRUE)

SET(CMAKE_MODULE_PATH
  ${CMAKE_MODULE_PATH}
  "${CMAKE_CURRENT_SOURCE_DIR}/cmake"
  )

IF (NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE MinSizeRel) 
ENDIF()

IF (NOT LIBRARY_TYPE)
  SET(LIBRARY_TYPE STATIC)
ENDIF()
STRING(TOUPPER ${LIBRARY_TYPE} LIBRARY_TYPE)

INCLUDE(platform)
INCLUDE(target)

ADD_SUBDIRECTORY(src)

ADD_CUSTOM_TARGET(
  uninstall
  "${CMAKE_COMMAND}" -P "${CMAKE_MODULE_PATH}/uninstall.cmake"
  )

ADD_CUSTOM_TARGET(
  dist
  COMMENT "Creating distribution"
  )

SET(DIST_DIR "${BIN_DIR}/dist")
IF (APPLE OR LINUX)
  IF (APPLE)
    SET(ZIP_FILE "efdl_mac64.zip")
  ELSE()
    SET(ZIP_FILE "efdl_linux64.zip")
  ENDIF()
  SET(ZIP_DIST "${BIN_DIR}/${ZIP_FILE}")
  ADD_CUSTOM_COMMAND(
    TARGET dist
    POST_BUILD
    COMMAND scripts/makedist.sh ${BIN_DIR} ${DIST_DIR} ${ZIP_DIST}
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    )
ENDIF()

MESSAGE(STATUS "BUILD TYPE: ${CMAKE_BUILD_TYPE}")
MESSAGE(STATUS "INSTALL PREFIX: ${CMAKE_INSTALL_PREFIX}")
MESSAGE(STATUS "LIBRARY TYPE: ${LIBRARY_TYPE}")
IF (${LIBRARY_TYPE} MATCHES "STATIC")
  SET(BIN_STATUS "BUILDING")
ELSE()
  SET(BIN_STATUS "NOT BUILDING")
ENDIF()
MESSAGE(STATUS "EFDL BINARY: ${BIN_STATUS}")
